[gd_scene load_steps=8 format=3 uid="uid://b3lbhrnuimhyy"]

[ext_resource type="Script" uid="uid://cdvveasa2byx5" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://djrb0nvimy7oy" path="res://dodge_the_creeps_2d_assets/fonts/Xolonium-Regular.ttf" id="2_8sq4i"]
[ext_resource type="PackedScene" uid="uid://co8dwgrr6nsv6" path="res://settings_menu.tscn" id="3_8sq4i"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[sub_resource type="InputEventAction" id="InputEventAction_8sq4i"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_640wx"]
resource_name = "pause"
events = [SubResource("InputEventAction_8sq4i")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="SettingsMenu" parent="." instance=ExtResource("3_8sq4i")]

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -240.0
offset_right = 240.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -120.0
offset_right = 240.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -220.0
offset_right = 100.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Settings" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -110.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 42
text = "Settings"

[node name="Back" type="Button" parent="."]
visible = false
offset_left = 15.0
offset_top = 15.0
offset_right = 132.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 42
shortcut = SubResource("Shortcut_640wx")
text = "Back"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
